# MapRandomizer

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.html  Dockerfile  LICENSE  MOSAIC_BUILD_ID  MOSAIC_COMMIT_ID  README.md  build.sh  cartpole.py  cloudbuild.yaml  docker-compose.yaml  logic_checker.py  model_average.py  palettes.json  requirements.txt  rl.py  room_geometry.json  shampoo.py  todo.txt  util.py
rust/: Cargo.toml  askama.toml
rust/data/: escape_timings.json  helpers_patch.json  hub_locations.json  map_tiles.json  notable_data.json  presets.json  reduced_flashing.json  samus_spritesheet_layout.json  start_locations.json  strat_videos.json  tech_data.json  vanilla_map.json
rust/data/presets/doors/: Ammo.json  Beam.json  Blue.json
rust/data/presets/full-settings/: 4 Random Objectives.json  Community Race Season 2.json  Community Race Season 3 (No animals).json  Community Race Season 3 (Save the animals).json  Community Race Season 3.json  Community Race Season 4.json  Community Race Season 5.json  Default.json  Double Suit.json  Gravity 9 + 1.json  Mentor Tournament.json  Metroid Objectives.json  Multicategory Tournament - Double Suit.json  Multicategory Tournament - Gravity, 9 ETanks, 1 Reserve.json  Multicategory Tournament - Metroids Objectives, No MotherBrain 2.json  Multicategory Tournament - No Objectives.json  Multicategory Tournament - Varia, HiJump, Spring, Grapple, Ice.json  No Objectives.json  Summer Series Expert Challenge.json  Varia + Movement.json  Winter Tournament - 4 Random Objectives.json  Winter Tournament - Double Suit.json  Winter Tournament - Gravity 9 + 1.json  Winter Tournament - Item Draft.json  Winter Tournament - Metroid Objectives.json  Winter Tournament - No Objectives.json  Winter Tournament - Varia + Movement.json
rust/data/presets/item-progression/: Challenge.json  Desolate.json  Normal.json  Technical.json  Tricky.json
rust/data/presets/objectives/: Bosses.json  Chozos.json  Metroids.json  Minibosses.json  None.json  Pirates.json  Random.json
rust/data/schema/: escape_timings_schema.json  map.avsc  map_tiles_schema.json
rust/maprando/: Cargo.toml
rust/maprando-game/: Cargo.toml
rust/maprando-game/src/: glowpatch.rs  lib.rs  smart_xml.rs  util.rs
rust/maprando-logic/: Cargo.toml
rust/maprando-logic/src/: boss_requirements.rs  helpers.rs  lib.rs
rust/maprando-wasm/: Cargo.toml
rust/maprando-wasm/pkg/: maprando_wasm.d.ts  maprando_wasm.js  maprando_wasm_bg.wasm  maprando_wasm_bg.wasm.d.ts  package.json
rust/maprando-wasm/src/: lib.rs
rust/maprando-web/: Cargo.toml
rust/maprando-web/src/: logic.rs  logic_helper.rs  m_web.rs  main.rs  randomize_helpers.rs  seed.rs  web.rs
rust/maprando-web/templates/: about.html  home.html  releases.html
rust/maprando/src/: customize.rs  difficulty.rs  game_data.rs  helpers.rs  lib.rs  map_repository.rs  patch.rs  preset.rs  randomize.rs  seed_repository.rs  settings.rs  spoiler_log.rs  spoiler_map.rs  traverse.rs  web.rs
rust/maprando/tests/: consistency_test.rs  logic_scenarios.rs  upgrade_presets.rs
rust/rando/: Cargo.toml
rust/rando/src/: main.rs  sm_json_data.rs
rust/simple-compress/: Cargo.toml
rust/simple-compress/src/: main.rs
rust/src/: customize.rs  game_data.rs  item_placement.rs  lib.rs  patch.rs  randomize.rs  seed_repository.rs  spoiler_map.rs  traverse.rs  web.rs
rust/src/customize/: retiling.rs  room_palettes.rs  samus_sprite.rs  vanilla_music.rs
rust/src/game_data/: smart_xml.rs  themed_retiling.rs
rust/src/patch/: beam_doors.rs  beam_doors_tiles.rs  bps.rs  compress.rs  decompress.rs  ips_write.rs  map_tiles.rs  suffix_tree.rs  title.rs
rust/src/randomize/: escape_timer.rs  run_speed.rs
rust/src/web/: logic.rs
rust/static/: colorMode.js  customize_seed.js  logic_style.css  sm-json-data
rust/static/sl_visualizer/: doors.json  index.html  item_addrs.json  script.js  style.css
rust/templates/: about.html  about.stpl  home.html  home.stpl  ids.txt  releases.html  releases.stpl
rust/templates/common/: header.html  header.stpl  navbar.html  navbar.stpl  save_load_rom.stpl  save_settings.html  save_settings.stpl  video-modal.html  video-modal.stpl
rust/templates/errors/: already_unlocked.stpl  invalid_rom.html  invalid_rom.stpl  invalid_token.stpl  missing_input_rom.stpl
rust/templates/generate/: game_variations.html  game_variations.stpl  item_progression.html  item_progression.stpl  main.html  main.stpl  quality_of_life.html  quality_of_life.stpl  scripts.html  scripts.stpl  skill_assumptions.html  skill_assumptions.stpl  submit_modal.stpl  tech.html  tech.stpl
rust/templates/home/: changelog.stpl  footnotes.stpl  game_variations.stpl  item_priority.stpl  item_progression.stpl  main.stpl  quality_of_life.stpl  scripts.stpl  skill_assumptions.stpl  tech.stpl
rust/templates/logic/: logic.html  logic.stpl  room.html  room.stpl  strat.html  strat.stpl  strat_page.html  strat_page.stpl  tech.html  tech.stpl
rust/templates/releases/: release73.json  release74.json
rust/templates/seed/: controller_settings.html  controller_settings.stpl  customize_seed.html  customize_seed.stpl  energy_tank_select.html  energy_tank_select.stpl  item_priority_details.stpl  item_progression_details.html  item_progression_details.stpl  other_customization.html  other_customization.stpl  other_options.stpl  quality_of_life_details.html  quality_of_life_details.stpl  samus_sprite_select.html  samus_sprite_select.stpl  seed_footer.html  seed_footer.stpl  seed_header.html  seed_header.stpl  skill_details.html  skill_details.stpl  things_to_know.stpl
(+11655 files in other folders)
