[package]
name = "maprando-game"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
glob = "0.3.1"
hashbrown = "0.14.5"
image = "0.24.5"
json = "0.12.4"
log = "0.4.17"
ndarray = "0.15.6"
num_enum = "0.5.7"
parse_int = "0.6.0"
serde = { version = "1.0.152", features = ["derive"] }
serde-hex = "0.1.0"
serde_json = "1.0.91"
strum = "0.27.2"
strum_macros = "0.27.2"
