[package]
name = "maprando-web"
version = "0.1.0"
edition = "2021"

[dependencies]
maprando = { path = "../maprando" }
json = "0.12.4"
hashbrown = "0.13.2"
glob = "0.3.1"
ips = "0.1.0"
parse_int = "0.6.0"
strum = "0.24.1"
strum_macros = "0.24.3"
rand = "0.8.5"
num_enum = "0.5.7"
clap = {version = "4.1.1", features=["derive"]}
anyhow = {version = "1.0.68", features = ["backtrace"]}
serde_json = "1.0.91"
serde = "1.0.152"
serde_derive = "1.0.152"
image = "0.24.5"
ndarray = "0.15.6"
slice-of-array = "0.3.2"
pathfinding = "4.2.1"
actix-web = "4.3.0"
actix-files = "0.6.2"
actix-form-data = "0.6.2"
actix-easy-multipart = "3.0.0"
env_logger = "0.10.0"
hashers = "1.0.1"
log = "0.4.17"
zip = "0.6.3"
object_store = {version = "0.6.1", features=["gcp"]}
base64 = "0.21.0"
futures = "0.3.25"
zstd = "0.12.2"
crypto-hash = "0.3.4"
by_address = "1.1.0"
urlencoding = "2.1.2"
png = "0.17.9"
serde-xml-rs = "0.6.0"
flips = "0.2.1"
crc32fast = "1.3.2"
askama = "0.12.1"
