[package]
name = "maprando-web"
version = "0.1.0"
edition = "2021"

[dependencies]
maprando = { path = "../maprando" }
maprando-game = { path = "../maprando-game" }
maprando-logic = { path = "../maprando-logic" }
json = "0.12.4"
hashbrown = { version = "0.14.5", features = ["serde"] }
glob = "0.3.1"
rand = "0.8.5"
clap = { version = "4.1.1", features = ["derive"] }
anyhow = { version = "1.0.68", features = ["backtrace"] }
serde_json = "1.0.91"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_variant = "0.1.3"
actix-web = "4.3.0"
actix-files = "0.6.2"
actix-form-data = "0.6.2"
actix-easy-multipart = "3.0.0"
env_logger = "0.10.0"
log = "0.4.17"
futures = "0.3.25"
crypto-hash = "0.3.4"
urlencoding = "2.1.2"
askama = "0.12.1"
